# aitmdetector

./: Dockerfile  README.md  bot.dockerfile  docker-compose.yml
api/: Cargo.toml
api/src/: detector.rs  error.rs  main.rs
bot/: Cargo.toml  config.toml
bot/src/: config.rs  main.rs
