[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["json", "multipart", "macros", "tokio"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.39"
openssl = "0.10.70"
x509-parser = "0.17.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
rustls = "0.23.22"
tokio-openssl = "0.6.5"
thiserror = "2.0.11"
derive_more = { version = "2.0.1", features = ["from"] }
url = "2.5.4"
levenshtein = "1.0.5"
