[package]
name = "phishing-detector-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = "1.0.217"
serde_json = "1.0.138"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
url = "2.5.4"
